--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,9 +45,10 @@ services:
   frontend:
     build:
       context: ./frontend
+    # Zertifikate aus ./crt mounten
     volumes:
-      - ./frontend/localhost+2.pem:/app/localhost+2.pem:ro
-      - ./frontend/localhost+2-key.pem:/app/localhost+2-key.pem:ro
+      - ./crt/localhost+2.pem:/app/localhost+2.pem:ro
+      - ./crt/localhost+2-key.pem:/app/localhost+2-key.pem:ro
     depends_on:
       - core
     ports:
@@ -63,13 +64,12 @@ services:
   ticket-service:
     build:
       context: ./ticket-service
-    # Zertifikate mounten:
+    # Zertifikate ebenfalls aus ./crt mounten
     volumes:
-      - ./frontend/localhost+2.pem:/app/localhost+2.pem:ro
-      - ./frontend/localhost+2-key.pem:/app/localhost+2-key.pem:ro
+      - ./crt/localhost+2.pem:/app/localhost+2.pem:ro
+      - ./crt/localhost+2-key.pem:/app/localhost+2-key.pem:ro
     ports:
       - "5000:5000"
-    # Hier wird SSL aktiviert – passe den Befehl ggf. an dein Framework an:
     command: >
       flask run
         --host=0.0.0.0
