--- a/ticket-service/Dockerfile
+++ b/ticket-service/Dockerfile
@@ -7,4 +7,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
+# Zertifikate ins Image kopieren
+COPY localhost+2.pem localhost+2.pem
+COPY localhost+2-key.pem localhost+2-key.pem
+
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5001", "--ssl-keyfile", "localhost+2-key.pem", "--ssl-certfile", "localhost+2.pem"]
