--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,16 @@
     "build": "vite build"
   },
   "dependencies": {
+    "lucide-react": "^0.268.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "lucide-react": "^0.268.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "vite": "^4.0.0",
     "@vitejs/plugin-react": "^3.0.0",
-    "tailwindcss": "^3.0.0",
+    "autoprefixer": "^10.0.0",
     "postcss": "^8.0.0",
-    "autoprefixer": "^10.0.0"
+    "tailwindcss": "^3.0.0",
+    "vite": "^4.0.0",
+    "vite-plugin-mkcert": "^1.17.8"
   }
 }
